# data-warehouse-client

./: .gitignore  pyproject.toml
data_warehouse_client/: csv_io.py  data_warehouse.py  requirements.txt  study_profile.py  type_checks.py
docs/: data_loaders.md  tutorial.md
docs/reference/: csv_io.md  data_warehouse.md
schema/: basic_dw_roles.sql  basic_dw_schema.sql
test/containers/: .env.default  Makefile  client-make-creds.sh  compose-template.yaml  env-common.sh  env-copy.sh  env-make-secrets.sh  run-tests.py
test/docker-suite/: .env.default  Makefile  README.md  compose-template.yaml
test/docker-suite/containers/client/: Dockerfile  Dockerfile-local  Dockerfile-remote  connect-client-container.sh  requirements-local.txt  requirements.txt  run-tests.sh
test/docker-suite/containers/client/test-framework/: run-tests.sh
test/docker-suite/containers/client/test-framework/scripts/: manage_db_test_data.py
test/docker-suite/containers/client/test-framework/tests/: test_data_warehouse_participants.py
test/docker-suite/containers/client/tests/: connection.py  manage_db_test_data.py  populate_db.py  test_connection.py  test_data_warehouse.py
test/docker-suite/resources/scripts/: client-make-creds.sh  env-common.sh  env-copy-secrets.sh  env-make-secrets.sh
